fix: spacing

--- a/packages/product-card/src/ProductCard.module.css
+++ b/packages/product-card/src/ProductCard.module.css
@@ -96,5 +96,9 @@
   .productCard {
     width: 132px;
   }
+
+  .productCard .button {
+    font-size: 12px;
+  }
 }
 
